--- a/src/locale/messages.fr.xlf
+++ b/src/locale/messages.fr.xlf
@@ -750,6 +750,78 @@
           <context context-type="linenumber">22</context>
         </context-group>
       </trans-unit>
+      <trans-unit id="7886570921510760899" datatype="html">
+        <source>Tags</source>
+        <target state="needs-review-translation">Mots-clés</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/admin/admin.component.html</context>
+          <context context-type="linenumber">16</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/components/main-content/main-content.component.html</context>
+          <context context-type="linenumber">44</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="6560126119609945418" datatype="html">
+        <source>Add tag</source>
+        <target state="needs-review-translation">Ajouter un mot-clé</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/admin/components/tag-dialog/tag-dialog.component.html</context>
+          <context context-type="linenumber">2,3</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="5872175735754226507" datatype="html">
+        <source>Edit tag</source>
+        <target state="needs-review-translation">Modifier le mot-clé</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/admin/components/tag-dialog/tag-dialog.component.html</context>
+          <context context-type="linenumber">4,6</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/admin/components/tag-manage/tag-manage.component.html</context>
+          <context context-type="linenumber">32</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="7123788581582703141" datatype="html">
+        <source>Tag successfully updated.</source>
+        <target state="needs-review-translation">Mot-clé mis à jour avec succès.</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/admin/components/tag-dialog/tag-dialog.component.ts</context>
+          <context context-type="linenumber">47</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="5718362070001066863" datatype="html">
+        <source>Tag successfully created.</source>
+        <target state="needs-review-translation">Mot-clé créé avec succès.</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/admin/components/tag-dialog/tag-dialog.component.ts</context>
+          <context context-type="linenumber">54</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="3793645278306284317" datatype="html">
+        <source><x id="START_TAG_MAT_ICON" ctype="x-mat_icon" equiv-text="&lt;mat-icon&gt;"/>add<x id="CLOSE_TAG_MAT_ICON" ctype="x-mat_icon" equiv-text="&lt;/mat-icon&gt;"/> Add Tag </source>
+        <target state="needs-review-translation"><x id="START_TAG_MAT_ICON" ctype="x-mat_icon" equiv-text="&lt;mat-icon&gt;"/>add<x id="CLOSE_TAG_MAT_ICON" ctype="x-mat_icon" equiv-text="&lt;/mat-icon&gt;"/> Ajouter un mot-clé</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/admin/components/tag-manage/tag-manage.component.html</context>
+          <context context-type="linenumber">8,11</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="108935827638897170" datatype="html">
+        <source>Delete tag</source>
+        <target state="needs-review-translation">Supprimer le mot-clé</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/admin/components/tag-manage/tag-manage.component.html</context>
+          <context context-type="linenumber">35</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="9001940350011393028" datatype="html">
+        <source>Are you sure you want to delete this tag?</source>
+        <target state="needs-review-translation">Êtes-vous sur de vouloir supprimer ce mot-clé ?</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/admin/components/tag-manage/tag-manage.component.ts</context>
+          <context context-type="linenumber">97</context>
+        </context-group>
+      </trans-unit>
     </body>
   </file>
 </xliff>
